$Id$

2017-01-09  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: fix panic on INVARIANTS enabled kernel, patch
	provided (#780) by Oliver Pinter <oliver.pinter@hardenedbsd.org>

2017-01-01  Christian Franke  <franke@computer.org>

	Happy New Year! Update copyright year in version info.

2016-11-12  Christian Franke  <franke@computer.org>

	atacmds.h, freebsd_nvme_ioctl.h: Apply patch-atacmds.h 1.1
	and patch-freebsd_nvme_ioctl.h 1.1 (2016-11-04) from
	pkgsrc.se/sysutils/smartmontools:
	Build fix for FreeBSD-11 and newer.  Don't redefine now
	existing things, ATA_SET_FEATURES and nvme_command.

2016-11-10  Christian Franke  <franke@computer.org>

	os_linux.cpp: Don't detect devices behind hpsa driver as regular
	SCSI devices.  Suggest to use '-d cciss,N' instead.

	Based on patch provided by Stanislav Brabec.

2016-11-05  Christian Franke  <franke@computer.org>

	update-smart-drivedb.in: Fix 'mv' error on first update with new
	script.

	configure.ac, update-smart-drivedb.in: Add '--with-gnupg' option.

	configure.ac: Add '--with-update-smart-drivedb=X.Y' option to
	backport drive database update script and man page to older
	version X.Y.

	configure.ac: Remove checks for no longer supported options
	--disable-drivedb, --enable-savestates and --enable-attributelog.

2016-11-04  Christian Franke  <franke@computer.org>

	Add authentication to update-smart-drivedb (ticket #751):
	Create missing branches RELEASE_6_5_DRIVEDB and RELEASE_6_6_DRIVEDB.
	Add signature files drivedb.h.raw.asc to each maintained branch.

	update-smart-drivedb.in: Include new public key block ID DFD22559.
	Download also drivedb.h.raw.asc.
	Do no longer download from trunk if branch does not exist.
	Create drivedb.h.raw.  Verify signature.
	Add options '--trunk', '--no-verify' and '--export-key'.
	update-smart-drivedb.8.in: Document new behaviour and options.

2016-10-23  Christian Franke  <franke@computer.org>

	smartd.8.in: Document Windows PARAMCHANGE service control command.
